--- a/lovedays/style.css
+++ b/lovedays/style.css
@@ -83,9 +83,11 @@ time {
       text-align: center;
       padding-left: 45px;
       padding-right: 45px;
+      margin-bottom:25px;
 }
 
 #heart img {
+      height:142px;
       margin: 0 auto;
 }
 
